<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    >


    <ImageView
        android:id="@+id/aboutLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/lumen"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:fontFamily="@font/poppins_black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/aboutLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/aboutDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_desc"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/aboutTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/teamTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/team_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/aboutDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/teamSection"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:gravity="top|center"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/teamTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="12dp">
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/mark"
                android:contentDescription="@string/Mark"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mark"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            >

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/Quervie"
                android:src="@drawable/quervie"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quervie"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/Ronn"
                android:src="@drawable/ronn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/Ronn"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/aboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
