<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNote">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/lumen" />

        <TextView
            android:id="@+id/lumenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/editMemoryLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/edit_note"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/editNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/edit_title"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_margin="5sp"
        app:layout_constraintTop_toBottomOf="@id/editMemoryLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editNoteContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5sp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="top|left"
        android:hint="@string/edit_content"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/saveNoteFAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNoteTitle"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/saveNoteFAB"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_save"
        android:backgroundTint="@color/primary_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>