<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesActivity">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/logoutButton"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/lumen" />

        <TextView
            android:id="@+id/lumenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_black"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_logout"
        app:layoutDescription="@string/logout"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logout"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/aboutButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_info"
        android:background="@android:color/transparent"
        android:contentDescription="@string/about"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noteFAB"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/primary_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/rvNotes"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/noteFAB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvEmptyNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_notes"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
